--- a/online-help-96-97/sidebar.yml
+++ b/online-help-96-97/sidebar.yml
@@ -555,7 +555,7 @@ entries:
         url: "/online-help-96-97/concept_what_nvme_is.html"
       - title: What an NVMe subsystem is
         url: "/online-help-96-97/concept_what_nvme_subsystem_is.html"
-      - title: NVMe namespaces
+      - title: Manage NVMe subsystems
         url: "/online-help-96-97/concept_nvme_namespaces.html"
       - title: NVMe namespaces window
         url: "/online-help-96-97/reference_nvme_namespaces_window.html"
