--- a/online-help-96-97/sidebar.yml
+++ b/online-help-96-97/sidebar.yml
@@ -377,18 +377,10 @@ entries:
         url: "/online-help-96-97/task_creating_luns.html"
       - title: Delete LUNs
         url: "/online-help-96-97/task_deleting_luns.html"
-      - title: Create initiator groups
+      - title: Manage initiator groups
         url: "/online-help-96-97/task_creating_initiator_groups.html"
-      - title: Delete initiator groups
-        url: "/online-help-96-97/task_deleting_initiator_groups.html"
-      - title: Add initiators
-        url: "/online-help-96-97/task_adding_initiators.html"
-      - title: Delete initiators from an initiator group
-        url: "/online-help-96-97/task_deleting_initiators_from_initiator_group.html"
       - title: Create portsets
         url: "/online-help-96-97/task_creating_portsets.html"
-      - title: Delete portsets
-        url: "/online-help-96-97/task_deleting_portsets.html"
       - title: Cloning LUNs
         url: "/online-help-96-97/task_cloning_luns.html"
       - title: Edit LUNs
@@ -405,8 +397,6 @@ entries:
         url: "/online-help-96-97/task_editing_initiator_groups.html"
       - title: Edit initiators
         url: "/online-help-96-97/task_editing_initiators.html"
-      - title: Edit portsets
-        url: "/online-help-96-97/task_editing_port_sets.html"
       - title: View LUN information
         url: "/online-help-96-97/task_viewing_lun_information.html"
       - title: View initiator groups
@@ -417,16 +407,6 @@ entries:
         url: "/online-help-96-97/concept_using_space_reservation_for_luns.html"
       - title: Guidelines for using LUN multiprotocol type
         url: "/online-help-96-97/concept_lun_multiprotocol_type_guidelines.html"
-      - title: Understand LUN clones
-        url: "/online-help-96-97/concept_understanding_lun_clones.html"
-      - title: Initiator hosts
-        url: "/online-help-96-97/concept_initiator_hosts.html"
-      - title: igroup name
-        url: "/online-help-96-97/concept_igroup_name.html"
-      - title: igroup type
-        url: "/online-help-96-97/concept_igroup_type.html"
-      - title: igroup ostype
-        url: "/online-help-96-97/concept_igroup_ostype.html"
       - title: LUNs window
         url: "/online-help-96-97/reference_luns_window.html"
     - title: Qtrees
@@ -463,14 +443,8 @@ entries:
         url: "/online-help-96-97/task_cloning_nvme_namespace.html"
       - title: Start and stopping the NVMe service
         url: "/online-help-96-97/task_starting_or_stopping_nvme_service.html"
-      - title: What NVMe is
-        url: "/online-help-96-97/concept_what_nvme_is.html"
       - title: What an NVMe subsystem is
         url: "/online-help-96-97/concept_what_nvme_subsystem_is.html"
-      - title: NVMe namespaces
-        url: "/online-help-96-97/concept_nvme_namespaces.html"
-      - title: NVMe namespaces window
-        url: "/online-help-96-97/reference_nvme_namespaces_window.html"
     - title: iSCSI protocol
       url: "/online-help-96-97/concept_iscsi_protocol.html"
     - title: FC/FCoE protocol
@@ -486,16 +460,8 @@ entries:
         url: "/online-help-96-97/task_deleting_qos_policy_groups.html"
       - title: Edit QoS policy groups
         url: "/online-help-96-97/task_editing_qos_policy_groups.html"
-      - title: Manage workload performance by using Storage QoS
-        url: "/online-help-96-97/concept_managing_workload_performance_by_using_storage_qos.html"
-      - title: How Storage QoS works
-        url: "/online-help-96-97/concept_how_storage_qos_works.html"
-      - title: How the maximum throughput limit works
-        url: "/online-help-96-97/concept_how_maximum_throughput_limit_works.html"
       - title: Rules for assigning storage objects to policy groups
         url: "/online-help-96-97/concept_rules_for_assigning_storage_objects_to_policy_groups.html"
-      - title: QoS Policy Groups window
-        url: "/online-help-96-97/reference_qos_policy_groups_window.html"
     - title: NIS services
       url: "/online-help-96-97/concept_nis_services.html"
     - title: LDAP client services
@@ -540,95 +506,49 @@ entries:
         url: "/online-help-96-97/reference_windows_window.html"
     - title: Name mapping
       url: "/online-help-96-97/concept_name_mapping.html"
-    - title: Manage data protection
-      url: "/online-help-96-97/concept_managing_data_protection.html"
+    - title: Mirror relationships
       entries:
-      - title: Mirror relationships
-        url: "/online-help-96-97/concept_mirror_relationships.html"
-        entries:
-        - title: Create a mirror relationship from a destination SVM
-          url: "/online-help-96-97/task_creating_mirror_relationship_from_destination_svm.html"
-        - title: Delete mirror relationships
-          url: "/online-help-96-97/task_deleting_mirror_relationships.html"
-        - title: Manage mirror relationships
-          url: "/online-help-96-97/task_editing_mirror_relationships.html"
-        - title: Break SnapMirror relationships
-          url: "/online-help-96-97/task_breaking_snapmirror_relationships.html"
-        - title: Resynchronize mirror relationships
-          url: "/online-help-96-97/task_resynchronizing_mirror_relationships.html"
-        - title: Reverse resynchronizing mirror relationships
-          url: "/online-help-96-97/task_reverse_resynchronizing_snapmirror_relationships.html"
-        - title: Abort a mirror transfer
-          url: "/online-help-96-97/task_aborting_mirror_relationships.html"
-        - title: Restore a volume in a mirror relationship
-          url: "/online-help-96-97/task_restoring_volume_mirror_relationship.html"
-        - title: How SnapMirror relationships work
-          url: "/online-help-96-97/concept_how_snapmirror_relationships_work.html"
-      - title: Vault relationships
-        url: "/online-help-96-97/concept_vault_relationships.html"
-        entries:
-        - title: Create a vault relationship from a destination SVM
-          url: "/online-help-96-97/task_creating_vault_relationship_from_destination_svm.html"
-        - title: Delete vault relationships
-          url: "/online-help-96-97/task_deleting_vault_relationships.html"
-        - title: Edit vault relationships
-          url: "/online-help-96-97/task_editing_vault_relationships.html"
-        - title: Initialize a vault relationship
-          url: "/online-help-96-97/task_initializing_vault_relationships.html"
-        - title: Update a vault relationship
-          url: "/online-help-96-97/task_updating_vault_relationships.html"
-        - title: Quiescing a vault relationship
-          url: "/online-help-96-97/task_quiescing_vault_relationships.html"
-        - title: Resume a vault relationship
-          url: "/online-help-96-97/task_resuming_vault_relationships.html"
-        - title: Abort a Snapshot copy transfer
-          url: "/online-help-96-97/task_aborting_vault_relationships.html"
-        - title: Restore a volume in a vault relationship
-          url: "/online-help-96-97/task_restoring_volume_vault_relationship.html"
-        - title: What a SnapVault backup is
-          url: "/online-help-96-97/concept_what_snapvault_backup_is.html"
-      - title: Mirror and vault relationships
-        url: "/online-help-96-97/concept_mirror_vault_relationships.html"
-        entries:
-        - title: Create a mirror and vault relationship from a destination SVM
-          url: "/online-help-96-97/task_creating_mirror_vault_relationship_from_destination_svm.html"
-        - title: Delete mirror and vault relationships
-          url: "/online-help-96-97/task_deleting_mirror_vault_relationships.html"
-        - title: Edit mirror and vault relationships
-          url: "/online-help-96-97/task_editing_mirror_vault_relationships.html"
-        - title: Initialize mirror and vault relationships
-          url: "/online-help-96-97/task_initializing_mirror_vault_relationships.html"
-        - title: Update mirror and vault relationships
-          url: "/online-help-96-97/task_updating_mirror_vault_relationships.html"
-        - title: Quiescing mirror and vault relationships
-          url: "/online-help-96-97/task_quiescing_mirror_vault_relationships.html"
-        - title: Resume mirror and vault relationships
-          url: "/online-help-96-97/task_resuming_mirror_vault_relationships.html"
-        - title: Break mirror and vault relationships
-          url: "/online-help-96-97/task_breaking_mirror_vault_relationships.html"
-        - title: Resynchronize mirror and vault relationships
-          url: "/online-help-96-97/task_resynchronizing_mirror_vault_relationships.html"
-        - title: Reverse resynchronizing mirror and vault relationships
-          url: "/online-help-96-97/task_reverse_resynchronizing_mirror_vault_relationships.html"
-        - title: Abort mirror and vault relationships
-          url: "/online-help-96-97/task_aborting_mirror_vault_relationships.html"
-        - title: Restore a volume in a mirror and vault relationship
-          url: "/online-help-96-97/task_restoring_volume_mirror_vault_relationship.html"
-      - title: What lag time is
-        url: "/online-help-96-97/reference_what_lag_time_is.html"
-      - title: Types of data protection relationships
-        url: "/online-help-96-97/concept_types_data_protection_relationships.html"
-      - title: Understand workloads supported by StrictSync and Sync policies
-        url: "/online-help-96-97/concept_understanding_workloads_supported_by_strictsync_sync_policies.html"
-      - title: SnapMirror licensing
-        url: "/online-help-96-97/concept_snapmirror_licensing.html"
-      - title: Protection window
-        url: "/online-help-96-97/reference_protection_window.html"
-      - title: SVM Relationships
-        url: "/online-help-96-97/concept_svm_relationships.html"
-      - title: Protection policies
-        url: "/online-help-96-97/concept_protection_policies.html"
-    - title: Snapshot policies
+      - title: Create a mirror relationship from a destination SVM
+        url: "/online-help-96-97/task_creating_mirror_relationship_from_destination_svm.html"
+      - title: Manage mirror relationships
+        url: "/online-help-96-97/task_editing_mirror_relationships.html"
+      - title: Break SnapMirror relationships
+        url: "/online-help-96-97/task_breaking_snapmirror_relationships.html"
+      - title: Reverse resynchronizing mirror relationships
+        url: "/online-help-96-97/task_reverse_resynchronizing_snapmirror_relationships.html"
+      - title: Abort a mirror transfer
+        url: "/online-help-96-97/task_aborting_mirror_relationships.html"
+      - title: Restore a volume in a mirror relationship
+        url: "/online-help-96-97/task_restoring_volume_mirror_relationship.html"
+    - title: Vault relationships
+      entries:
+      - title: Create a vault relationship from a destination SVM
+        url: "/online-help-96-97/task_creating_vault_relationship_from_destination_svm.html"
+      - title: Manage mirror relationships
+        url: "/online-help-96-97/task_editing_vault_relationships.html"
+      - title: Abort a Snapshot copy transfer
+        url: "/online-help-96-97/task_aborting_vault_relationships.html"
+      - title: Restore a volume in a vault relationship
+        url: "/online-help-96-97/task_restoring_volume_vault_relationship.html"
+      - title: What a SnapVault backup is
+        url: "/online-help-96-97/concept_what_snapvault_backup_is.html"
+    - title: Mirror and vault relationships
+      entries:
+      - title: Manage mirror and vault relationships
+        url: "/online-help-96-97/task_editing_mirror_vault_relationships.html"
+      - title: Abort mirror and vault relationships
+        url: "/online-help-96-97/task_aborting_mirror_vault_relationships.html"
+      - title: Restore a volume in a mirror and vault relationship
+        url: "/online-help-96-97/task_restoring_volume_mirror_vault_relationship.html"
+    - title: What lag time is
+      url: "/online-help-96-97/reference_what_lag_time_is.html"
+    - title: Protection window
+      url: "/online-help-96-97/reference_protection_window.html"
+    - title: SVM relationships
+      url: "/online-help-96-97/concept_svm_relationships.html"
+    - title: Manage protection policies
+      url: "/online-help-96-97/concept_protection_policies.html"
+    - title: Manage Snapshot policies
       url: "/online-help-96-97/concept_snapshot_policies.html"
-    - title: Schedules
+    - title: Manage schedules
       url: "/online-help-96-97/concept_schedules.html"
