--- a/online-help-96-97/sidebar.yml
+++ b/online-help-96-97/sidebar.yml
@@ -7,18 +7,11 @@ entries:
       entries:
       - title: Set up a cluster by using the template file
         url: "/online-help-96-97/task_setting_up_cluster_using_template_file.html"
-      - title: Set up the cluster manually
-        url: "/online-help-96-97/concept_setting_up_cluster_manually.html"
         entries:
         - title: Create a cluster
           url: "/online-help-96-97/task_creating_cluster.html"
         - title: Set up a network
           url: "/online-help-96-97/task_setting_up_network.html"
-          entries:
-          - title: Set up a network when an IP address range is enabled
-            url: "/online-help-96-97/task_setting_up_network_when_ip_address_range_is_enabled.html"
-          - title: Set up a network when an IP address range is disabled
-            url: "/online-help-96-97/task_setting_up_network_when_ip_address_range_is_disabled.html"
         - title: Set up a support page
           url: "/online-help-96-97/task_setting_up_support_page.html"
         - title: Review storage recommendations
@@ -83,9 +76,6 @@ entries:
           url: "/online-help-96-97/concept_metrocluster_switchover_switchback_workflow.html"
         - title: Preparing for switchover and switchback operations
           url: "/online-help-96-97/task_preparing_for_switchover_switchback_operations.html"
-          entries:
-          - title: Rename the MetroCluster local site (Site A)
-            url: "/online-help-96-97/task_renaming_metrocluster_local_site_a.html"
         - title: Performing a negotiated switchover
           url: "/online-help-96-97/task_performing_negotiated_planned_switchover.html"
         - title: Performing a unplanned switchover
@@ -146,16 +136,10 @@ entries:
       url: "/online-help-96-97/concept_ldap.html"
     - title: Users
       url: "/online-help-96-97/concept_cluster_user_accounts.html"
-      entries:
-      - title: Roles
-        url: "/online-help-96-97/concept_roles_conceptual.html"
     - title: Roles
       url: "/online-help-96-97/concept_roles.html"
     - title: Manage the network
       url: "/online-help-96-97/concept_managing_network.html"
-      entries:
-      - title: Network window
-        url: "/online-help-96-97/reference_network_window.html"
     - title: IPspaces
       url: "/online-help-96-97/concept_ipspaces.html"
     - title: Broadcast domains
@@ -449,10 +433,6 @@ entries:
     - title: Create QoS policy groups
       url: "/online-help-96-97/task_creating_qos_policy_groups.html"
       entries:
-      - title: Delete QoS policy groups
-        url: "/online-help-96-97/task_deleting_qos_policy_groups.html"
-      - title: Edit QoS policy groups
-        url: "/online-help-96-97/task_editing_qos_policy_groups.html"
       - title: Rules for assigning storage objects to policy groups
         url: "/online-help-96-97/concept_rules_for_assigning_storage_objects_to_policy_groups.html"
     - title: NIS services
@@ -467,8 +447,6 @@ entries:
       url: "/online-help-96-97/concept_dns_ddns_services.html"
     - title: SVM users
       url: "/online-help-96-97/concept_svm_user_accounts.html"
-    - title: Roles
-      url: "/online-help-96-97/concept_roles_delete.html"
     - title: UNIX
       url: "/online-help-96-97/concept_unix.html"
     - title: Windows
@@ -477,32 +455,10 @@ entries:
         url: "/online-help-96-97/task_creating_local_user_group.html"
       - title: Edit local Windows group properties
         url: "/online-help-96-97/task_editing_local_windows_group_properties.html"
-      - title: Add user accounts to a Windows local group
-        url: "/online-help-96-97/task_adding_user_accounts_to_windows_local_group.html"
-      - title: Rename a local Windows group
-        url: "/online-help-96-97/task_renaming_local_windows_group.html"
-      - title: Delete a local Windows group
-        url: "/online-help-96-97/task_deleting_local_windows_group.html"
-      - title: Create a local Windows user account
-        url: "/online-help-96-97/task_creating_local_windows_user_accounts.html"
-      - title: Edit the local Windows user properties
-        url: "/online-help-96-97/task_editing_local_windows_user_properties.html"
-      - title: Assigning group memberships to a user account
-        url: "/online-help-96-97/task_assigning_group_memberships_to_user_account.html"
-      - title: Rename a local Windows user
-        url: "/online-help-96-97/task_renaming_local_windows_user.html"
-      - title: Reset the password of a Windows local user
-        url: "/online-help-96-97/task_changing_password_for_windows_local_users.html"
-      - title: Delete a local Windows user account
-        url: "/online-help-96-97/task_deleting_local_windows_user_account.html"
-      - title: Windows window
-        url: "/online-help-96-97/reference_windows_window.html"
     - title: Name mapping
       url: "/online-help-96-97/concept_name_mapping.html"
     - title: Mirror relationships
       entries:
-      - title: Create a mirror relationship from a destination SVM
-        url: "/online-help-96-97/task_creating_mirror_relationship_from_destination_svm.html"
       - title: Manage mirror relationships
         url: "/online-help-96-97/task_editing_mirror_relationships.html"
       - title: Break SnapMirror relationships
@@ -515,16 +471,12 @@ entries:
         url: "/online-help-96-97/task_restoring_volume_mirror_relationship.html"
     - title: Vault relationships
       entries:
-      - title: Create a vault relationship from a destination SVM
-        url: "/online-help-96-97/task_creating_vault_relationship_from_destination_svm.html"
-      - title: Manage mirror relationships
+      - title: Manage vault relationships
         url: "/online-help-96-97/task_editing_vault_relationships.html"
       - title: Abort a Snapshot copy transfer
         url: "/online-help-96-97/task_aborting_vault_relationships.html"
       - title: Restore a volume in a vault relationship
         url: "/online-help-96-97/task_restoring_volume_vault_relationship.html"
-      - title: What a SnapVault backup is
-        url: "/online-help-96-97/concept_what_snapvault_backup_is.html"
     - title: Mirror and vault relationships
       entries:
       - title: Manage mirror and vault relationships
@@ -533,8 +485,6 @@ entries:
         url: "/online-help-96-97/task_aborting_mirror_vault_relationships.html"
       - title: Restore a volume in a mirror and vault relationship
         url: "/online-help-96-97/task_restoring_volume_mirror_vault_relationship.html"
-    - title: What lag time is
-      url: "/online-help-96-97/reference_what_lag_time_is.html"
     - title: Protection window
       url: "/online-help-96-97/reference_protection_window.html"
     - title: SVM relationships
