--- a/project.yml
+++ b/project.yml
@@ -106,3 +106,9 @@ sidebar:
       url: https://docs.netapp.com/us-en/ontap/
     - title: Legal Notices
       url: /reference_legal_notices.html
+
+
+product-family: 
+  name: ONTAP
+  repo: ontap-family
+  sidebar_label: All ONTAP product documentation
