--- a/project.yml
+++ b/project.yml
@@ -5,7 +5,7 @@ settings:
   prod:
     pdf_enabled: true
     harmony_enabled: true
-  search: ontap
+  search: ontap-sm-classic, ontap
 homepage:
   tiles:
     - title: Get started
